# HUEmessage

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
headers/: Color.hpp  Image.hpp  hueConverter.hpp  image.hpp  libPNG.hpp  pixel.hpp
old/: image.cpp.old
sources/: Color.cpp  Image.cpp  hueConverter.cpp  image.cpp  libPNG.cpp  main.cpp  pixel.cpp  testColor.cpp
tests/: testColor.cpp  testImage.cpp
